Version 0.8.0 (2013-04-XX)
--------------------------
Hadoop ETL: added. Version 0.1.0
EmrEtlRunner: bumped to 0.1.0
EmrEtlRunner: changed .rvmrc to .ruby-version, thanks @richo (#190)
StorageLoader: changed .rvmrc to .ruby-version, thanks @richo (#190)

Version 0.7.6 (2013-03-03)
--------------------------
HiveQL: redshift-etl.q added. Version 0.0.1 (#174)
HiveQL: hive-rolling-etl.q renamed to hive-etl.q and bumped to 0.5.7
HiveQL: non-hive-rolling-etl.q renamed to mysql-infobright-etl.q and bumped to 0.0.8 (part of #172)
EmrEtlRunner: bumped to 0.0.9
EmrEtlRunner: renamed :snowplow: variable names and added new Redshift one in config.yml (part of #172)
EmrEtlRunner: updated to support Redshift as a storage format (#173)
EmrEtlRunner: added missing /Gemfile to BUNDLE_GEMFILE in Bash script
StorageLoader: bumped to 0.0.5
StorageLoader: added Redshift-specific fields to config.yml (part of #159)
StorageLoader: added Redshift load support into StorageLoader (part of #159)
StorageLoader: added missing /Gemfile to BUNDLE_GEMFILE in Bash scripts
Redshift: table-def.sql script added. Version 0.0.1 (#158)
Infobright: bumped setup_ and verify_infobright.sql to 0.0.8
Infobright: widened useragent field (#184)
Infobright: added migration script 0.0.7->0.0.8
Serde: fixed and enabled broken tests (#14). Version unchanged

Version 0.7.5 (2013-02-25)
--------------------------
JS tracker: bumped to 0.11.1
JS tracker: fixed bug with cookie secure flag killing user ID cookies (#181)

Version 0.7.4 (2013-02-22)
--------------------------
JS tracker: bumped to 0.11.0
JS tracker: introduced setAppId() and deprecated setSiteId() (#168)
JS tracker: 1st party user ID now transmitted as duid (domain uid) (part of #150)
JS tracker: now sends dtm - the client timestamp (#149)
JS tracker: deprecated and disabled attachUserId()
JS tracker: deprecated getVisitorId() and getVisitorInfo() - use getDomainUserId() and getDomainUserInfo() instead