@@ -2,6 +2,7 @@ Version 0.8.0 (2013-04-XX)
 --------------------------
 Hadoop ETL: added. Version 0.1.0
 EmrEtlRunner: bumped to 0.1.0
+EmrEtlRunner: updated config.yml format
 EmrEtlRunner: changed .rvmrc to .ruby-version, thanks @richo (#190)
 StorageLoader: changed .rvmrc to .ruby-version, thanks @richo (#190)
 
